# oh-so-silly

./: .gitignore  CMakeLists.txt  README.md  cats.cpp  cats.h  find.cpp  keyboardhook.cpp  keyboardhook.h  main.cpp  pinkhue.cpp  pinkhue.h  playresource.cpp  protect.cpp  screenarea.cpp
resources/: resources.rc
